BEEBEEP (Secure Lan Messanger)

BeeBEEP 1.0.2 
- Show homepage with BeeBEEP activities at startup (can be disabled by option)
- Display chat members in chat window and as selected users in user panel
- Added "Max simultaneous downloads" option in beebeep.ini configuration file
- Enabled multiple files and folder download from file sharing window

BeeBEEP 1.0.1
- Fixed notification bug with "always on top" option active
- More "image format type" added for profile picture
- Fixed font tonality in avatar creation

BeeBEEP 1.0.0
- Only an instance of BeeBEEP can started a time (can be changed in beebeep.rc file)
- Send message button
- Default avatar created for the users
- Message filter in chat
- Default Listener, File Transfer and Broadcast port can be set in beebeep.rc file
- Chat settings menu is moved to chat toolbar
- System tray icon is now always visible (context menu with settings is added)

BeeBEEP 0.9.9
- Improved subnet selection when there are many network cards installed
- HotKeys CTRL+A and CTRL+C (CMD+ for mac users) enabled in chat window read-only section
- Show avatar in list of users option
- Status menu icon shows your information when clicked (menu is accessible by the usual way, the drop down arrow)

BeeBEEP 0.9.8
- Language interface added
- More info in profile
- MacOSX version
- eComStation and OS/2 version
- High dpi support for screenshot plugin 

BeeBEEP 0.9.7
- Clear chat messages option 
- Encryption security level 2 
- Removed the limit on the number of files can be shared
- Groups
- Regular-Bold Text Marker plugin
- (Drag and) drop files in chat or in local shares
- Linux version

BeeBEEP 0.9.6
- Auto set Away status when idle option
- Make screenshot plugin
- Conway's Game of Life plugin (just for fun)
- Link saved chat using only nickname option

BeeBEEP 0.9.5
- Load minimized at startup option
- A new window to see application log
- Save chat messages on exit option
- BeeTetris plugin added, just for fun